--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-snowpack-app"
+      content="Chill Music App created for fun and it's build with react"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito&family=Rubik&display=swap"
       rel="stylesheet"
     />
-    <title>Snowpack App</title>
+    <title>Chill Music App</title>
   </head>
   <body>
     <div id="root"></div>
